depoyment fxes part 3

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,11 @@ pandas
 pymysql
 uvicorn
 pydantic
-re
 torch
 nltk
-json
 pydantic
 typing-extensions
 email-validator
-urllib
 tld
 joblib
-sklearn
+scikit-learn
